--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     </parent>
 
 	<properties>
-        <java.version>17</java.version> <!-- Ensure you're using the correct Java version -->
+        <java.version>17</java.version>
     </properties>
 
     <dependencies>
@@ -25,7 +25,6 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- Lombok (Optional for getters/setters) -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
