--- a/pom.xml
+++ b/pom.xml
@@ -35,14 +35,14 @@
 		<dependency>
     		<groupId>com.h2database</groupId>
     		<artifactId>h2</artifactId>
-    		<scope>runtime</scope>
+    		<scope>test</scope>
 		</dependency>
 
         <!-- JUnit for testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <scope>runtime</scope>
+            <scope>test</scope>
         </dependency>
 	
 	    <!-- Spring Boot Starter Data JPA -->
